# edit-md

./: CHANGELOG.md  README.md  RELEASE_NOTES.md  TODO.md  index.html  package-lock.json  package.json  splashscreen.html  update.json  vite.config.ts
.github/workflows/: deploy-pages.yml
docs/: GITHUB_ISSUES.md  I18N_STRING_INVENTORY.md  TAURI_SETUP.md  release-notes-v0.1.1.md  release-sha256.txt  unsigned-release-checklist.md
docs/release/: README.md  checklist.md
public/: splashscreen.html
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AboutModal.tsx  DocumentTabs.tsx  EditorPane.tsx  PreviewPane.tsx  RecentFiles.tsx  StartScreen.tsx  StatusBar.tsx  Toolbar.tsx
src/hooks/: useBeforeUnloadWarning.ts  useDocumentState.ts  useRecentFiles.ts  useTheme.ts
src/i18n/: index.tsx  messages.ts
src/lib/: export.ts  file.ts  theme.ts
src/services/: browserFileService.ts  fileService.ts  runtimeFileService.ts  tauriApi.ts  tauriFileService.ts
src/types/: file.ts  recentFile.ts
