[package]
name = "edit-md"
version = "0.1.0"
description = "Windows desktop markdown editor"
authors = ["edit-md"]
edition = "2021"

[lib]
name = "edit_md_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
